docs controller patient final
